# web-scalpel

./: .gitignore  LICENSE  README.md  config.yaml  run.sh
backend/: .gitignore  CHANGELOG.md  backend.cabal  serve.json
backend/app/Scalpel/: Main.hs
backend/app/Server/: Main.hs
backend/src/: Config.hs  Opts.hs  ProductDetail.hs  ProductDetailRepo.hs  ProductDetailRow.hs  Scrapers.hs  SqlRepo.hs
frontend/: .gitignore  elm.json
frontend-svelte/: .env.development  .env.production  index.html  package.json
frontend-svelte/src/: App.svelte
frontend-svelte/src/lib/: ProductItem.svelte
frontend/src/: Main.elm
puppeteer/: package.json
puppeteer/src/: index.js
