cabal-version:      2.4
name:               backend
version:            0.1.0.0
author:             Quang Tran (Chop Tr)
maintainer:         logan1011001@gmail.com
extra-source-files: CHANGELOG.md

common shared-properties
  default-language:   Haskell2010
  build-depends:
    , aeson                 ^>=2.0.1.0
    , base                  ^>=4.14.3.0
    , bytestring
    , directory
    , filepath
    , http-types
    , optparse-applicative
    , regex-compat
    , scalpel
    , scotty
    , sqlite-simple
    , text
    , time
    , wai-cors
    , yaml

  default-extensions:
    LambdaCase
    OverloadedStrings

  ghc-options:        -Wunused-imports

executable my-scalpel
  import:         shared-properties
  main-is:        Scalpel/Main.hs
  hs-source-dirs: app
  build-depends:  backend

executable my-scalpel-server
  import:         shared-properties
  main-is:        Server/Main.hs
  hs-source-dirs: app
  build-depends:  backend

library
  import:          shared-properties
  hs-source-dirs:  src
  exposed-modules:
    Config
    Opts
    ProductDetail
    ProductDetailRow
    SqlRepo
